--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@mui/material": "^7.3.6",
     "@mui/x-data-grid": "^8.23.0",
     "cloudinary": "^2.8.0",
+    "framer-motion": "^12.26.2",
+    "lucide-react": "^0.562.0",
     "mongoose": "^9.0.2",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.6.0",
     "stripe": "^20.1.2",
     "swiper": "^12.0.3",
     "twilio": "^5.11.2"
